# acpctl

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  IDEAS-self-governing-codebase.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PHASE5_US3.md  LICENSE  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE4_USER_STORY_2_COMPLETE.md  PHASE5_US3_COMPLETE.md  PHASE8_COMPLETE.md  PHASE8_IMPLEMENTATION_SUMMARY.md  PYDANTIC_STATE_RESEARCH.md  README.md  RESEARCH_EXECUTIVE_SUMMARY.md  SETUP_COMPLETE.md  STATE_ARCHITECTURE_DECISIONS.md  STATE_IMPLEMENTATION_TEMPLATE.py  STATE_MODEL_README.md  acpctl-phase1-implementation-plan.md  coverage.xml  pyproject.toml  rfe-phase1.md  rfe.md  setup.py  speckit-langgraph-architecture.md  test_phase8.py  validate_setup.py
.github/: dependabot.yml
.specify/memory/: constitution.md
acpctl/: __init__.py
acpctl/agents/: __init__.py  architect.py  base.py  governance.py  implementation.py  specification.py
acpctl/cli/: __init__.py  main.py
acpctl/cli/commands/: __init__.py  history.py  implement.py  init.py  plan.py  resume.py  specify.py  status.py
acpctl/cli/ui/: __init__.py  config.py
acpctl/core/: __init__.py  checkpoint.py  state.py  workflow.py
acpctl/storage/: __init__.py  artifacts.py  constitution.py
acpctl/utils/: __init__.py  errors.py  logging.py  performance.py  validation.py
demo/: README.md  acpctl-demo.cast  mock-acpctl.py  record-demo.sh
docs/: ARCHITECTURE.md
examples/: README.md
examples/templates/commands/: plan.md  specify.md  tasks.md
specs/001-langgraph-spec-kit-port/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-langgraph-spec-kit-port/checklists/: requirements.md
specs/001-langgraph-spec-kit-port/contracts/: api-contract.yaml  cli-interface.yaml  workflow-state.yaml
src/acpctl/: __init__.py  cli.py
src/acpctl_workflows/: __init__.py  commands.py  config.py  scripts.py  state.py  templates.py  workflow.py
tests/: __init__.py  conftest.py  test_cli.py
tests/integration/: __init__.py  test_resume_workflow.py
tests/integration/fixtures/: README.md
